Fix sticky table header overflow issue using a clone approach

--- a/ui/src/design-system/components/table/table-header/table-header.module.scss
+++ b/ui/src/design-system/components/table/table-header/table-header.module.scss
@@ -3,14 +3,9 @@
 @import 'src/design-system/variables/variables.scss';
 
 .tableHeader {
-  all: unset;
-  display: table-cell;
   white-space: nowrap;
   vertical-align: middle;
   border-bottom: 2px solid $color-neutral-200;
-  position: sticky;
-  top: 96px;
-  z-index: 2;
   background-color: $color-neutral-50;
 
   &.active {
